# SpadesKing

./: .gitignore  LICENSE  README.md
src/cpp/: CMakeLists.txt
src/cpp/examples/: CMakeLists.txt  game_demo.cpp
src/cpp/include/src/spades/: card.h  game.h  match.h  player.h  round.h  team.h  trick.h
src/cpp/include/src/utils/: random.h
src/cpp/src/bot/: CMakeLists.txt
src/cpp/src/mcts/: CMakeLists.txt
src/cpp/src/neat/: CMakeLists.txt
src/cpp/src/spades/: CMakeLists.txt  card.cpp  computer_player.cpp  game.cpp  human_player.cpp  player.cpp  round.cpp  team.cpp  trick.cpp
src/cpp/src/utils/: CMakeLists.txt
src/cpp/tests/: CMakeLists.txt  spades_test.cpp
src/cpp/tests/spades_tests/: card_test.cpp
src/python/: extract_info.py  scrpt.py
